--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="bg-black text-white font-sans">
@@ -66,68 +69,36 @@
       </div> -->
 
         <!-- Search Filter Box -->
-        <div class="absolute left-1/2 top-[80%] transform -translate-x-1/2 -translate-y-1/2 w-full max-w-5xl px-4 z-10">
-            <div
-                class="bg-white/70 backdrop-blur-md rounded-full p-6 shadow-lg w-full flex flex-wrap items-end justify-between gap-4 text-sm text-black font-medium">
-
-                <!-- Make -->
-                <div class="flex flex-col w-full sm:w-auto">
-                    <label for="make" class="text-xs font-semibold text-black/80 mb-1">SELECT MAKE</label>
-                    <select id="make" class="bg-transparent border-b border-black/60 outline-none py-1">
-                        <option>All Makes</option>
-                        <option>Audi</option>
-                        <option>BMW</option>
-                        <option>McLaren</option>
-                    </select>
+        <div
+            class="absolute left-1/2 top-[80%] transform -translate-x-1/2 -translate-y-1/2 z-10 w-[90%] max-w-5xl search-strip">
+            <div class="flex">
+                <!-- Button 1 -->
+                <div
+                    class="clip-parallelogram-outer search-background flex items-center justify-center text-2xl text-black exo2 overlap z-10 cursor-pointer fade-in-left delay-3">
+                    Brand
                 </div>
 
-                <!-- Model -->
-                <div class="flex flex-col w-full sm:w-auto">
-                    <label for="model" class="text-xs font-semibold text-black/80 mb-1">SELECT MODEL</label>
-                    <select id="model" class="bg-transparent border-b border-black/60 outline-none py-1">
-                        <option>All Models</option>
-                        <option>R8</option>
-                        <option>3 Series</option>
-                        <option>720S</option>
-                    </select>
+                <!-- Button 2 -->
+                <div
+                    class="clip-parallelogram search-background flex items-center justify-center text-2xl text-black exo2 overlap z-11 cursor-pointer overlap z-11 fade-in-left">
+                    Model
                 </div>
-
-                <!-- Price -->
-                <div class="flex flex-col w-full sm:w-auto">
-                    <div class="flex justify-between text-xs font-semibold text-black/80 mb-1">
-                        <label>MIN PRICE</label>
-                        <label>MAX PRICE</label>
-                    </div>
-                    <div class="flex items-center gap-2">
-                        <input type="range" min="0" max="60000" class="w-32 accent-blue-600">
-                        <span class="text-xs">£0</span>
-                        <input type="range" min="0" max="60000" class="w-32 accent-blue-600">
-                        <span class="text-xs">£60,000</span>
-                    </div>
-                </div>
-
-                <!-- Toggle -->
-                <div class="flex items-center gap-2">
-                    <label class="text-xs font-semibold">CASH</label>
-                    <div class="relative inline-block w-10 align-middle select-none transition duration-200 ease-in">
-                        <input type="checkbox" name="toggle" id="toggle"
-                            class="toggle-checkbox absolute block w-5 h-5 rounded-full bg-black border-4 appearance-none cursor-pointer peer">
-                        <label for="toggle"
-                            class="toggle-label block overflow-hidden h-5 rounded-full bg-gray-300 peer-checked:bg-black"></label>
-                    </div>
-                    <label class="text-xs font-semibold">MONTHLY</label>
+                <div
+                    class="clip-parallelogram  search-background flex items-center justify-center text-2xl text-black exo2 overlap z-11 cursor-pointer overlap z-11 fade-in-right">
+                    Price
                 </div>
 
                 <!-- Search Button -->
-                <button
-                    class="flex items-center gap-2 bg-black text-white px-6 py-2 border border-white hover:bg-white hover:text-black transition">
-                    <i data-lucide="search" class="w-4 h-4"></i>
-                    <span class="uppercase text-sm font-semibold">Search</span>
-                </button>
+                <div
+                    class="clip-parallelogram-outer bg-gold flex items-center justify-center text-2xl text-black exo2 overlap z-12 cursor-pointer fade-in-right delay-3">
+                    Search
+                </div>
 
             </div>
         </div>
+
     </section>
+
 
     <!-- Additional sections of your website could go here -->
 
