fix: overflow fix and view all stock button added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <!-- Centered logo -->
                 <div class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">
                     <img src="https://d2465b52a51d8d05e9bb-6ab01a951f137332ea1d08f23dcb3881.ssl.cf3.rackcdn.com/2018/05/tier-one-logo-min.png"
-                        alt="TierOne Logo" class="h-17 object-contain" />
+                        alt="TierOne Logo" class="h-20 object-contain" />
                 </div>
             </div>
         </nav>
@@ -100,44 +100,45 @@
 
             </div>
     </section>
-
-    <section class="w-screen exo2 text-md">
-        <div class="grid grid-cols-2 gap-4">
-            <div class="text-left grid place-content-center">
-                <div class="pl-24">
-                    <div class="text-xl exo2-italic">Welcome to Tier One Automotive</div>
-                    <div class="py-2 font-bold">
-                        Tier One Automotive was started by company director Alex Pope after 11 years at one of the UK's
-                        leading
-                        independent dealerships.
-                    </div>
-                    <div class="py-2">
-                        We pride ourselves on our exemplary levels of customer service coupled with our in-depth
-                        knowledge
-                        of
-                        the sport and prestige used car market, all tailored towards providing a relaxed and enjoyable
-                        experience for every customer. All our vehicles are hand-picked and prepared to our exacting
-                        standard,
-                        ensuring that all important peace of mind when making your purchase.
-                    </div>
-                    <div class="py-2 font-bold">
-                        All vehicles are housed at our Kings Langley indoor showroom just 5 minutes from Junction 20 off
-                        the
-                        M25.
-                    </div>
-                    <div class="py-2">
-                        For those with demanding work schedules, we offer a delivery service to ensure you don't miss
-                        out on
-                        that special car you've been searching for.
-                    </div>
+<section class="w-full exo2 text-md overflow-hidden">   
+    <div class="grid grid-cols-2 gap-0">
+        <div class="text-left grid place-content-center">
+            <div class="pl-24">
+                <div class="text-xl exo2-italic">Welcome to Tier One Automotive</div>
+                <div class="py-2 font-bold">
+                    Tier One Automotive was started by company director Alex Pope after 11 years at one of the UK's
+                    leading
+                    independent dealerships.
+                </div>
+                <div class="py-2">
+                    We pride ourselves on our exemplary levels of customer service coupled with our in-depth
+                    knowledge
+                    of
+                    the sport and prestige used car market, all tailored towards providing a relaxed and enjoyable
+                    experience for every customer. All our vehicles are hand-picked and prepared to our exacting
+                    standard,
+                    ensuring that all important peace of mind when making your purchase.
+                </div>
+                <div class="py-2 font-bold">
+                    All vehicles are housed at our Kings Langley indoor showroom just 5 minutes from Junction 20 off
+                    the
+                    M25.
+                </div>
+                <div class="py-2">
+                    For those with demanding work schedules, we offer a delivery service to ensure you don't miss
+                    out on
+                    that special car you've been searching for.
                 </div>
             </div>
-            <div class="text-left clipped-img mb-24">
-                <img src="https://d2465b52a51d8d05e9bb-6ab01a951f137332ea1d08f23dcb3881.ssl.cf3.rackcdn.com/2021/09/Tier-One-Next-to-welcome-text-image_result.jpg"
-                    class="w-full h-full object-cover object-center rounded-md">
-            </div>
         </div>
-    </section>
+        <div class="text-left clipped-img mb-24 overflow-hidden relative">
+            <img
+              src="https://d2465b52a51d8d05e9bb-6ab01a951f137332ea1d08f23dcb3881.ssl.cf3.rackcdn.com/2021/09/Tier-One-Next-to-welcome-text-image_result.jpg"
+              class="w-screen h-full object-cover object-center rounded-md"
+            />
+        </div>
+    </div>
+</section>
 
 
     <section class="w-full bg-[#E5E4DF] pt-12 pb-24 px-4 exo2-italic">
@@ -276,12 +277,20 @@
                 </div>
 
 
+
             </div>
+
+        </div>
+
+
+        <div class="mt-4 flex justify-center">
+                        <button
+                class="px-4 py-1 text-2xl transition mt-2 text-center flex items-center justify-center space-x-2 group">
+                View All Stock
+                <i data-lucide="chevron-right" class="w-8 h-8 transform transition-transform group-hover:translate-x-1 text-[#AEA37D]"></i>
+            </button>
         </div>
     </section>
-
-
-
 
     <!-- Additional sections of your website could go here -->
 
