--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         </a>
       </div> -->
         <div
-            class="absolute top-[65%] sm:top-[70%] md:top-[75%] lg:top-[78%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-full px-4 z-10">
+            class="absolute top-[65%] sm:top-[70%] md:top-[75%] lg:top-[78%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-[60%] z-10">
             <div
-                class="flex flex-col sm:flex-row items-center justify-between w-full max-w-5xl mx-auto px-8 py-3 bg-gradient-to-r from-white/30 via-white/20 to-white/30 backdrop-blur-xl rounded-md backdrop-blur-md text-white space-y-4 sm:space-y-0 sm:space-x-4">
+                class="flex flex-col sm:flex-row items-center justify-between w-full max-w-5xl mx-auto px-8 py-2 bg-gradient-to-r from-white/30 via-white/20 to-white/30 backdrop-blur-xl rounded-md backdrop-blur-md text-white space-y-4 sm:space-y-0 sm:space-x-4">
 
                 <!-- Search (smaller) -->
                 <div
@@ -87,7 +87,7 @@
                     class="w-full sm:w-2/4 flex items-center justify-center space-x-2 hover:bg-white/10 py-1 rounded-full transition font-semibold text-lg">
                     <span>VIEW STOCK</span>
                 </div>
-
+                
                 <!-- Divider -->
                 <div class="hidden sm:block w-px h-6 bg-white/30"></div>
 
@@ -100,45 +100,69 @@
 
             </div>
     </section>
-<section class="w-full exo2 text-md overflow-hidden">   
-    <div class="grid grid-cols-2 gap-0">
-        <div class="text-left grid place-content-center">
-            <div class="pl-24">
-                <div class="text-xl exo2-italic">Welcome to Tier One Automotive</div>
-                <div class="py-2 font-bold">
-                    Tier One Automotive was started by company director Alex Pope after 11 years at one of the UK's
-                    leading
-                    independent dealerships.
+
+
+    <section class="w-full exo2 text-md overflow-hidden pt-20">
+        <div class="grid grid-cols-2 gap-0 ">
+            <div class="text-left grid place-content-center">
+                <div class="pl-24">
+                    <div class="text-xl exo2-italic">Welcome to Tier One Automotive</div>
+                    <div class="py-2 font-bold">
+                        Tier One Automotive was started by company director Alex Pope after 11 years at one of the UK's
+                        leading
+                        independent dealerships.
+                    </div>
+                    <div class="py-2">
+                        We pride ourselves on our exemplary levels of customer service coupled with our in-depth
+                        knowledge
+                        of
+                        the sport and prestige used car market, all tailored towards providing a relaxed and enjoyable
+                        experience for every customer. All our vehicles are hand-picked and prepared to our exacting
+                        standard,
+                        ensuring that all important peace of mind when making your purchase.
+                    </div>
+                    <div class="py-2 font-bold">
+                        All vehicles are housed at our Kings Langley indoor showroom just 5 minutes from Junction 20 off
+                        the
+                        M25.
+                    </div>
+                    <div class="py-2">
+                        For those with demanding work schedules, we offer a delivery service to ensure you don't miss
+                        out on
+                        that special car you've been searching for.
+                    </div>
                 </div>
-                <div class="py-2">
-                    We pride ourselves on our exemplary levels of customer service coupled with our in-depth
-                    knowledge
-                    of
-                    the sport and prestige used car market, all tailored towards providing a relaxed and enjoyable
-                    experience for every customer. All our vehicles are hand-picked and prepared to our exacting
-                    standard,
-                    ensuring that all important peace of mind when making your purchase.
-                </div>
-                <div class="py-2 font-bold">
-                    All vehicles are housed at our Kings Langley indoor showroom just 5 minutes from Junction 20 off
-                    the
-                    M25.
-                </div>
-                <div class="py-2">
-                    For those with demanding work schedules, we offer a delivery service to ensure you don't miss
-                    out on
-                    that special car you've been searching for.
+            </div>
+            <div class="text-left clipped-img overflow-hidden relative">
+                <img src="Images/T1-Jag.png" class="w-screen h-full object-cover object-center rounded-md" />
+            </div>
+        </div>
+
+
+        <div class="grid grid-cols-2 gap-0 pt-20">
+            <!-- Left image, clipped -->
+            <div class="clipped-img-left mb-24 overflow-hidden relative">
+                <img
+                src="Images/T1-Jag-2.png"
+                class="w-screen h-full object-cover object-left-30 rounzed-md"
+              />
+            </div>
+
+            <!-- Right-aligned text with padding -->
+            <div class="text-left grid place-content-center">
+                <div class="pr-24">
+                    <div class="text-5xl font-bold leading-tight">320+</div>
+                    <div class="text-xl exo2-italic pt-1 pb-4">THE FINEST CURATED VEHICLES</div>
+                    <div class="text-base">
+                        Years of experience, attention to detail and our little black book allow us to present the
+                        finest stock
+                        available in the UK.
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="text-left clipped-img mb-24 overflow-hidden relative">
-            <img
-              src="https://d2465b52a51d8d05e9bb-6ab01a951f137332ea1d08f23dcb3881.ssl.cf3.rackcdn.com/2021/09/Tier-One-Next-to-welcome-text-image_result.jpg"
-              class="w-screen h-full object-cover object-center rounded-md"
-            />
-        </div>
-    </div>
-</section>
+
+    </section>
 
 
     <section class="w-full bg-[#E5E4DF] pt-12 pb-24 px-4 exo2-italic">
@@ -148,16 +172,22 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 place-items-start">
 
                 <!-- Ferrari -->
-                <div class="bg-white shadow-md rounded overflow-hidden w-full max-w-lg flex flex-col">
+
+                <div class="bg-white shadow-md rounded overflow-hidden w-full max-w-lg flex flex-col relative">
+
+                    <!-- Porsche Logo Overlay -->
+                    <img src="Images/PorscheLogoMasked.png" alt="Porsche Logo"
+                        class="absolute -bottom-6 -right-3 w-72  pointer-events-none z-100 select-none opacity-40" />
+
                     <!-- Images -->
                     <div class="grid grid-cols-3 gap-1 h-48">
                         <img src="https://img.cdn.dragon2000.net/C2846/U743/IMG_34760-medium.jpg" alt="Ferrari Main"
-                            class="col-span-2 object-cover w-full h-full rounded-tl-md" />
+                            class="col-span-2 object-cover w-full h-full rounded-tl-md z-10" />
                         <div class="flex flex-col gap-1 h-full">
                             <img src="https://img.cdn.dragon2000.net/C2846/U743/IMG_34730-medium.jpg" alt="Thumb 1"
-                                class="object-cover w-full h-1/2 rounded-tr-md" />
+                                class="object-cover w-full h-1/2 rounded-tr-md z-10" />
                             <img src="https://img.cdn.dragon2000.net/C2846/U743/IMG_34749-medium.jpg" alt="Thumb 2"
-                                class="object-cover w-full h-1/2" />
+                                class="object-cover w-full h-1/2 z-10" />
                         </div>
                     </div>
                     <!-- Info -->
@@ -188,17 +218,24 @@
                     </div>
                 </div>
 
-                <!-- BMW -->
-                <div class="bg-white shadow-md rounded overflow-hidden w-full max-w-lg flex flex-col">
+
+                <div class="bg-white shadow-md rounded overflow-hidden w-full max-w-lg flex flex-col relative">
+
+                    <!-- Porsche Logo Overlay -->
+                    <img src="Images/PorscheLogoMasked.png" alt="Porsche Logo"
+                        class="absolute -bottom-6 -right-3 w-72  pointer-events-none z-100 select-none opacity-40" />
+
+
+
                     <!-- Images -->
                     <div class="grid grid-cols-3 gap-1 h-48">
                         <img src="https://img.cdn.dragon2000.net/C2846/U740/IMG_34537-medium.jpg" alt="BMW Main"
-                            class="col-span-2 object-cover w-full h-full rounded-tl-md" />
-                        <div class="flex flex-col gap-1 h-full">
+                            class="col-span-2 object-cover w-full h-full rounded-tl-md z-10" />
+                        <div class="flex flex-col gap-1 h-full z-10">
                             <img src="https://img.cdn.dragon2000.net/C2846/U740/IMG_34527-medium.jpg" alt="Thumb 1"
                                 class="object-cover w-full h-1/2 rounded-tr-md" />
                             <img src="https://img.cdn.dragon2000.net/C2846/U740/IMG_34564-medium.jpg" alt="Thumb 2"
-                                class="object-cover w-full h-1/2" />
+                                class="object-cover w-full h-1/2 z-10" />
                         </div>
                     </div>
                     <!-- Info -->
@@ -275,24 +312,19 @@
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
-
         </div>
 
-
         <div class="mt-4 flex justify-center">
-                        <button
+            <button
                 class="px-4 py-1 text-2xl transition mt-2 text-center flex items-center justify-center space-x-2 group">
                 View All Stock
-                <i data-lucide="chevron-right" class="w-8 h-8 transform transition-transform group-hover:translate-x-1 text-[#AEA37D]"></i>
+                <i data-lucide="chevron-right"
+                    class="w-8 h-8 transform transition-transform group-hover:translate-x-1 text-[#AEA37D]"></i>
             </button>
         </div>
     </section>
 
-    <!-- Additional sections of your website could go here -->
 
     <script>
         lucide.createIcons();
