--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
     </section>
 
 
-    <div class="embla">
+    <div class="embla bg-gray-100 p-6">
         <div class="embla__container">
-            <div class="embla__slide">Slide 1</div>
-            <div class="embla__slide">Slide 2</div>
-            <div class="embla__slide">Slide 3</div>
-            <div class="embla__slide">Slide 4</div>
-            <div class="embla__slide">Slide 5</div>
-            <div class="embla__slide">Slide 6</div>
-            <div class="embla__slide">Slide 7</div>
+            <div class="embla__slide bg-gray-200 flex items-center justify-center text-center">Slide 1</div>
+            <div class="embla__slide bg-gray-200 flex items-center justify-center text-center">Slide 2</div>
+            <div class="embla__slide bg-gray-200 flex items-center justify-center text-center">Slide 3</div>
+            <div class="embla__slide bg-gray-200 flex items-center justify-center text-center">Slide 4</div>
+            <div class="embla__slide bg-gray-200 flex items-center justify-center text-center">Slide 5</div>
+            <div class="embla__slide bg-gray-200 flex items-center justify-center text-center">Slide 6</div>
+            <div class="embla__slide bg-gray-200 flex items-center justify-center text-center">Slide 7</div>
         </div>
     </div>
 
